Fixed errors with JSON-LD

--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
       "Daniel Tichenor",
       "Jared Champion"
       ],
-    "event": "Forecastle Music Festival",
-    "location": "Louisville, Kentucky",
+    "event": [
+      "@type": "Event",
+      "name": "Forecastle Music Festival",
+      "startDate": "2020-07-17",
+      "endDate": "202-07-19",
+      "eventStatus": "cancelled",
+      "location": "Louisville, Kentucky"
+    ],
     "image": "https://assets.website-files.com/5e9686ff3186916848a0b598/5e96887aca19177b3d9a12a6_f20_admat_finalpng-93a37b92-p-1080.png",
     "url": "https://www.cagetheelephant.com/home/",
     "album": "Social Cues",
